Started styling the 404 page, fixed emoji cutoff issue

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -353,6 +353,7 @@ figcaption {
 }
 
 img.emoji {
+  border-radius: 0; // Don't want to cut off corners
   height: 1em;
   width: 1em;
   margin: 0 0.05em 0 0.1em;
